# comfyui-project

./: .cursorrules  .gitignore  COLAB_CLI_GUIDE.md  NEXT_AGENT_INSTRUCTIONS.md  READY_TO_USE.md  comfyui_colab_guide.md  comfyui_fixed_final.ipynb  comfyui_gorilla.ipynb  comfyui_gorilla_fixed.ipynb  comfyui_official_colab.ipynb  generate_gorilla.sh  gorilla_auto_colab.ipynb  gorilla_fixed_colab.ipynb  gorilla_pinggy_test.ipynb  gorilla_simple.ipynb  gorilla_workflow.json  image_to_image_workflow.json  sd15_simple_workflow.json  setup_colab.sh  test_colab_setup.sh
Dynamic-Sliders-ComfyUI/: .editorconfig  .eslintrc.json  .gitignore  .prettierrc  Instructions.txt  LICENSE  README-Rules.md  README.md  custom_nodes.json  pyproject.toml  setup.cfg
Dynamic-Sliders-ComfyUI/.cursor/rules/: comfyui-backend.mdc  comfyui-custom-nodes-dev.mdc  comfyui-frontend.mdc  comfyui-terminal-analysis.mdc
Dynamic-Sliders-ComfyUI/.github/workflows/: publish.yml  publish_action.yml
Dynamic-Sliders-ComfyUI/js/: Dynamic.js  appearance.js  context.js  modern_slider_hider.js  slider_stacker_widget_hider.js  workflowfix.js
docs/: civitai_lora_trainer_guide.md  comfyui_download_guideline.md  flux_lora_comfyui_guide.md  pinggy_comfyui_colab_guide.md  session_summary.md
user/default/workflows/: DQtVz8Q5.json  flux_lora_tutorial_workflow.json  image-to-image.json
